--- a/agil samlad/ja3.html
+++ b/agil samlad/ja3.html
@@ -39,7 +39,7 @@ button {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 24px;
     font-weight: bold;
-    width: 20%;
+    /* width: 20%; */
     padding: 50px;
     margin-top: 100px;
     box-shadow: 4px 4px 4px 0px #37005e;
