story & ja, html & css

--- a/agil samlad/story1.html
+++ b/agil samlad/story1.html
@@ -25,7 +25,7 @@
     <p>Gå själv till stenen?</p>
 
     <a href="ja1.html" role="button">JA</a>
-    <a class="no-btn" href="nej1" role="button">NEJ</a>
+    <a class="no-btn" href="nej1.html" role="button">NEJ</a>
 
     </article>
 
