--- a/agil samlad/story3.html
+++ b/agil samlad/story3.html
@@ -18,15 +18,20 @@
 
     <h1>PLANKET</h1>
         
+    <article>
     <p>Tuffa Tina och resten av gänget möts upp vid planket. Hon säger till alla att nu ska ni gå till sandlådan och se om ni kan hitta några småbarn att retas med. Du är inte alls sugen att retas med småbarn men vill ju hänga med kompisarna…
     </p>
     <br><br>
     <p>Föreslå att ni ska gå till stenen och klättra istället?</p>
      
-<form>
+    <a href="ja3.html" role="button">JA</a>
+    <a class="no-btn" href="nej3.html" role="button">NEJ</a>
+
+    </article>
+<!-- <form>
     <button type="submit" formaction="ja3.html">JA</button>
     <button type="submit" formaction="nej3.html">NEJ</button>
-</form>
+</form> -->
 
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 
