--- a/agil samlad/ja4.html
+++ b/agil samlad/ja4.html
@@ -6,47 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome..css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="w-style.css">
     <title>AgilDemokrati</title>
-
-
-<style>
-body {
-    background-color: #7000A5; 
-    font-family: 'Gloria Hallelujah', cursive;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 250px;
-}
-
-article {
-    background-color: white;
-    font-size: 24px;
-    font-weight: bold;
-    width: 40%;
-    text-align: center;
-    padding: 50px 80px;
-    box-shadow: 4px 4px 4px 0px #37005e;
-}
-
-button {
-    background-color: #00FFC2;
-    color: #37005e;
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 24px;
-    font-weight: bold;
-    width: 20%;
-    padding: 50px;
-    margin-top: 100px;
-    box-shadow: 4px 4px 4px 0px #37005e;
-    cursor: pointer;
-}
-
-</style>
 
 
 </head>
