--- a/agil samlad/nej3.html
+++ b/agil samlad/nej3.html
@@ -15,7 +15,7 @@
 <header>
     <a href="#" class="fas fa-arrow-left"></a>
     
-    <a href="#" class="fas fa-times"></a>
+    <a href="endpage.html" class="fas fa-times"></a>
 </header>
 
     <article>
