--- a/agil samlad/story3.html
+++ b/agil samlad/story3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Agil Demokrati</title>
 </head>
@@ -12,7 +13,7 @@
     <header>
         <a href="#" class="fas fa-arrow-left"></a>
         
-        <a href="#" class="fas fa-times"></a>
+        <a href="endpage.html" class="fas fa-times"></a>
     </header>
     
 
