--- a/agil samlad/nej1.html
+++ b/agil samlad/nej1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Agil Demokrati</title>
  
 <header>
     <a href="#" class="fas fa-arrow-left"></a>
