--- a/agil samlad/nej3.html
+++ b/agil samlad/nej3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Agil Demokrati</title>
    
 </head>
 <body>
