--- a/agil samlad/nej5.html
+++ b/agil samlad/nej5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Agil Demokrati</title>
     
 </head>
 <body>
