--- a/agil samlad/ja1.html
+++ b/agil samlad/ja1.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="w-style.css">
     <title>Agil Demokrati</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="endpage.html" class="fas fa-times"></a>
+    </header>
     
     <section>
         <article>
