--- a/agil samlad/ja2.html
+++ b/agil samlad/ja2.html
@@ -51,6 +51,10 @@ button {
 
 </head>
 <body>
+    <header>
+        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="endpage.html" class="fas fa-times"></a>
+    </header>
     <section>
         <article>
             Du och vännerna springer för livet och lyckas undkomma mannen.
