--- a/agil samlad/ja2.html
+++ b/agil samlad/ja2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome..css">
+    <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="w-style.css">
     <title>AgilDemokrati</title>
 
@@ -39,7 +39,7 @@ button {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 24px;
     font-weight: bold;
-    width: 20%;
+    
     padding: 50px;
     margin-top: 100px;
     box-shadow: 4px 4px 4px 0px #37005e;
