--- a/agil samlad/ja3.html
+++ b/agil samlad/ja3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome..css">
+    <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="w-style.css">
     <title>AgilDemokrati</title>
 
@@ -51,6 +51,10 @@ button {
 
 </head>
 <body>
+    <header>
+    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="endpage.html" class="fas fa-times"></a>
+</header>
     <section>
         <article>
             Tuffa Tina tittar syrligt på dig, vänder sig till de andra och säger: Kom vi går till sandlådan nu...
