--- a/agil samlad/ja4.html
+++ b/agil samlad/ja4.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome..css">
+    <script src="https://kit.fontawesome.com/2d1b12f7ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="w-style.css">
     <title>AgilDemokrati</title>
 
 
 </head>
 <body>
+    <header>
+        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="endpage.html" class="fas fa-times"></a>
+    </header>
     <section>
         <article>
             (Demokratiska Dora?) tar upp ett block, river av (antal) bitar paper, alla får varsin bit. “Nu får alla skriva ner om man vill gå till stenen eller om man vill gå till sandlådan och lägga lappen i (namns) mössa. 
