--- a/agil samlad/story4.html
+++ b/agil samlad/story4.html
@@ -21,7 +21,7 @@
         <h1>PLANKET</h1>
             
         <article>
-            <p>Det blir argumentation. Alla vännerna vill göra sin röst hörd, vissa vill gå med Tuffa Tina andra tycker att det verkar taskigt att retas. Helt plötsligt kommer (Demokratiska Dora?) med ett förslag som får alla barnen i gruppen att höja på ögonbrynen: “Vi lever i en demokrati, och då ska alla ha möjlighet att tycka till om vad man ska göra, ska vi leka demokrati och rösta om saken!”
+            <p>Det blir argumentation. Alla vännerna vill göra sin röst hörd, vissa vill gå med Tuffa Tina andra tycker att det verkar taskigt att retas. Helt plötsligt kommer Demokratiska Dora med ett förslag som får alla barnen i gruppen att höja på ögonbrynen: “Vi lever i en demokrati, och då ska alla ha möjlighet att tycka till om vad man ska göra, ska vi leka demokrati och rösta om saken!”
             </p>
             <br><br>
             <p>Rösta om saken?</p>
