--- a/agil samlad/story5.html
+++ b/agil samlad/story5.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 <body>
     
     <header>
-        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="story4.html" class="fas fa-arrow-left"></a>
         
         <a href="endpage.html" class="fas fa-times"></a>
     </header>
