--- a/agil samlad/nej1.html
+++ b/agil samlad/nej1.html
@@ -11,7 +11,7 @@
     <title>Agil Demokrati</title>
  
 <header>
-    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="story1.html" class="fas fa-arrow-left"></a>
     
     <a href="endpage.html" class="fas fa-times"></a>
 </header>
