--- a/agil samlad/nej2.html
+++ b/agil samlad/nej2.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="story2.html" class="fas fa-arrow-left"></a>
     
     <a href="endpage.html" class="fas fa-times"></a>
 </header>
