--- a/agil samlad/nej3.html
+++ b/agil samlad/nej3.html
@@ -13,13 +13,13 @@
 </head>
 <body>
 <header>
-    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="story3.html" class="fas fa-arrow-left"></a>
     
     <a href="endpage.html" class="fas fa-times"></a>
 </header>
 
     <article>
-        <p>(insert name) harklar sig och piper fram: Men jag vill inte gå till sandlådan och retas, jag vill hellre göra något annat.</p>
+        <p>Blyge Bill harklar sig och piper fram: Men jag vill inte gå till sandlådan och retas, jag vill hellre göra något annat.</p>
         <a href="story4.html" role="button">Fortsätt</a>
     </article>
     
