--- a/agil samlad/nej4.html
+++ b/agil samlad/nej4.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="story4.html" class="fas fa-arrow-left"></a>
     
     <a href="endpage.html" class="fas fa-times"></a>
 </header>
