--- a/agil samlad/ja1.html
+++ b/agil samlad/ja1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="story1.html" class="fas fa-arrow-left"></a>
         <a href="endpage.html" class="fas fa-times"></a>
     </header>
     
