--- a/agil samlad/ja3.html
+++ b/agil samlad/ja3.html
@@ -10,49 +10,10 @@
     <title>AgilDemokrati</title>
 
 
-<style>
-body {
-    background-color: #7000A5; 
-    font-family: 'Gloria Hallelujah', cursive;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 250px;
-}
-
-article {
-    background-color: white;
-    font-size: 24px;
-    font-weight: bold;
-    width: 40%;
-    text-align: center;
-    padding: 50px 80px;
-    box-shadow: 4px 4px 4px 0px #37005e;
-}
-
-button {
-    background-color: #00FFC2;
-    color: #37005e;
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 24px;
-    font-weight: bold;
-    /* width: 20%; */
-    padding: 50px;
-    margin-top: 100px;
-    box-shadow: 4px 4px 4px 0px #37005e;
-    cursor: pointer;
-}
-
-</style>
-
-
 </head>
 <body>
     <header>
-    <a href="#" class="fas fa-arrow-left"></a>
+    <a href="story3.html" class="fas fa-arrow-left"></a>
     <a href="endpage.html" class="fas fa-times"></a>
 </header>
     <section>
