--- a/agil samlad/ja4.html
+++ b/agil samlad/ja4.html
@@ -18,7 +18,7 @@
     </header>
     <section>
         <article>
-            (Demokratiska Dora?) tar upp ett block, river av (antal) bitar paper, alla får varsin bit. “Nu får alla skriva ner om man vill gå till stenen eller om man vill gå till sandlådan och lägga lappen i (namns) mössa. 
+            Demokratiska Dora tar upp ett block, river av 7 bitar paper, alla får varsin bit. “Nu får alla skriva ner om man vill gå till stenen eller om man vill gå till sandlådan och lägga lappen i Bills mössa. 
         </article>
         <form>
         <button type="submit" formaction="ja5.html">
