--- a/agil samlad/ja5.html
+++ b/agil samlad/ja5.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <header>
-        <a href="#" class="fas fa-arrow-left"></a>
+        <a href="story4.html" class="fas fa-arrow-left"></a>
         <a href="endpage.html" class="fas fa-times"></a>
     </header>
     <section>
         <article>
             
-När alla lagt ned sin röst i mössan räknar  (Demokratiska Dora?) rösterna.
+När alla lagt ned sin röst i mössan räknar Demokratiska Dora rösterna.
 
 Resultatet: 3 av vännerna vill gå till sandlådan och 4 av vännerna vill gå till stenen.
 Eftersom majoriteten (De flesta) vill gå till stenen så måste de andra gå med på det.
