it works fine thank you

--- a/agil samlad/endpage.html
+++ b/agil samlad/endpage.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="endstyle.css" />
     </head>
     <body>
-        <h3>Tack för att du spelade och ville lära dig mer om demokrati!</h3>
+        <h3>Tack för att du spelade och ville lära dig mer om demokrati!!</h3>
 
         <div class="btn-container">
             <a href="index.html"><button class="btn1">Spela igen..</button></a>
